"Origin to geometry" not working with Text (Font) objects. #39745

Closed
opened 2014-04-15 15:07:12 +02:00 by Nicholas Kopakakis · 7 comments

System Information
Windows 7
Nvidia 660Ti

Blender Version
Blender 2.70

Short description of error
You can't set origin to geometry correct for text object

Exact steps for others to reproduce the error
Create a Text object
Look at Front view
Press Ctrl+Alt+Shift+C and set origin to geometry
The origin moves down and left of your text (!!!)
If you press Ctrl+Alt+Shift+C again the origin moves more to the left and down...
origin_to_geometry.blend

**System Information** Windows 7 Nvidia 660Ti **Blender Version** Blender 2.70 **Short description of error** You can't set origin to geometry correct for text object **Exact steps for others to reproduce the error** Create a Text object Look at Front view Press Ctrl+Alt+Shift+C and set origin to geometry The origin moves down and left of your text (!!!) If you press Ctrl+Alt+Shift+C again the origin moves more to the left and down... [origin_to_geometry.blend](https://archive.blender.org/developer/F84942/origin_to_geometry.blend)

Changed status to: 'Open'

Changed status to: 'Open'
Nicholas Kopakakis self-assigned this 2014-04-15 15:07:12 +02:00

Added subscriber: @NicholasKopakakis

Added subscriber: @NicholasKopakakis

Added subscriber: @mont29

Added subscriber: @mont29
Nicholas Kopakakis was unassigned by Bastien Montagne 2014-04-15 16:34:27 +02:00
Bastien Montagne changed title from Origin to geometry bug??? to "Origin to geometry" not working with Text (Font) objects. 2014-04-15 16:35:08 +02:00

This issue was referenced by blender/blender-addons-contrib@4769b44bdd

This issue was referenced by blender/blender-addons-contrib@4769b44bdda7999bb69de9602f10dced3de2affe

This issue was referenced by 4769b44bdd

This issue was referenced by 4769b44bdda7999bb69de9602f10dced3de2affe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4769b44bdd.

Closed by commit 4769b44bdd.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39745
No description provided.