Fix T39745: "Origin to geometry" not working with Text objects. (regression)