source/blender/editors/object/object_transform.c
@@ -881,7 +881,7 @@ static int object_origin_set_exec(bContext *C, wmOperator *op)
 
 				Curve *cu = ob->data;
 
-				if (cu->bb == NULL && (centermode != ORIGIN_TO_CURSOR)) {
+				if (ob->bb == NULL && (centermode != ORIGIN_TO_CURSOR)) {
 					/* do nothing*/
 				}
 				else {
@@ -889,8 +889,9 @@ static int object_origin_set_exec(bContext *C, wmOperator *op)
 						/* done */
 					}
 					else {
-						cent[0] = 0.5f * (cu->bb->vec[4][0] + cu->bb->vec[0][0]);
-						cent[1] = 0.5f * (cu->bb->vec[0][1] + cu->bb->vec[2][1]) - 0.5f;    /* extra 0.5 is the height o above line */
+						/* extra 0.5 is the height o above line */
+						cent[0] = 0.5f * (ob->bb->vec[4][0] + ob->bb->vec[0][0]);
+						cent[1] = 0.5f * (ob->bb->vec[0][1] + ob->bb->vec[2][1]);
 					}
 
 					cent[2] = 0.0f;
